--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     
     <div class="content">
         <!-- Page content -->
-        <h1 id="slogan">WELCOME TO HACK DATA, THE MOST USEFUL WEBSITE IN THE INTERNET <br></h1>
+        <h3 id="slogan">WELCOME TO WEB DUMP, THE MOST USEFUL WEBSITE IN THE INTERNET <br></h3>
             <button class="accordion">DEVELOPER</button>
             <div class="panel">
                 <a href="https://fex.net/">Fex - Cloud Storage</a>
