--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <a href="https://www.flaticon.com/">Flat icon - <p>icons :D</p></a>
                 <a href="https://iconarchive.com/">Icon archive - <p>more icons</p></a>
                 <a href="https://icon-icons.com/pt/">icons - <p>even more icons</p></a>
+                <a href="https://opengameart.org/">Open game art<p>Free assets</p></a>
+                <a href="https://free3d.com/">Free 3d<p>Free 3d models</p></a>
                 <button class="accordion">Section 1</button>
             <div class="panel">
                 <a href="#">nice</a>
@@ -34,6 +36,8 @@
                 <a href="http://hackedgadgets.com/">hacked gadgets - <p>cool stuff</p></a>
                 <a href="http://russianlearn.com/">russin learn - <p>Learn Pусский</p></a>
                 <a href="https://mentalroyale.com/">Mental Royale - <p>Math Booyah</p></a>
+                <a href="https://www.tutorialspoint.com/index.htm#tab7">tutorialsPoint<p>Programming lessons</p></a>
+                <a href="https://www.busuu.com/">Busuu<p>Learn an idiom</p></a>
             </div>
 
             <button class="accordion">PRODUCTIVITY</button>
@@ -41,6 +45,7 @@
                 <a href="https://www.naturalreaders.com/online/">Natural readers - <p>reading tool</p></a>
                 <a href="https://www.textfixer.com/tools/random-word-generator.php">Random word Generator</a>
                 <a href="https://app.milanote.com/">Milanote - <p>the tool for organizing creative projects</p></a>
+                <a href="https://hacknplan.com/">HackNPlan - <p>Planner</p></a>
             </div>
             
             <button class="accordion">DOWNLOADS</button>
@@ -69,6 +74,8 @@
                 <a href="https://www.bulkrenameutility.co.uk/">Bulk Rename - <p>rename a lot of files at once</p></a>
                 <a href="https://css-ig.net/pingo">pingo - <p>compress images</p></a>
                 <a href="https://hnet.com/">hnet - <p>some tools</p></a>
+                <a href="https://ytmp3.cc/youtube-to-mp3/">YTMP3<p> YT to Mp3</p></a>
+                <a href="https://tineye.com/">Tiny Eye<p>Reverse image search</p></a>
             </div>
 
             <button class="accordion">PRODUCTION</button>
@@ -77,6 +84,9 @@
                 <a href="https://fontmeme.com/">Fontmeme - <p>some fonts</p></a>
                 <a href="https://coolors.co/5d2a42-fb6376-fcb1a6-ffdccc-fff9ec">coolors - <p>color palette</p></a>
                 <a href="https://color.adobe.com/create/image">Adobe color -<p>color palette</p></a>
+                <a href="https://www.colorhexa.com/">colorHexa<p>Color palettes</p></a>
+                <a href="https://www.dreamstime.com/">DreamsTime<p>Stock photos</p></a>
+                <a href="http://colormind.io/">ColorMind<p>more color palettes</p></a>
             </div>
 
             <button class="accordion">MUSIC/SOUND</button>
@@ -90,11 +100,18 @@
                 <a href="https://mixkit.co/">mixkit - <p>more free sound SFX</p></a>
                 <a href="https://soundpacks.com/">sound packs - <p>sound packs for Fl studio</p></a>
                 <a href="https://www.epidemicsound.com/sound-effects/">epidemicsound - what is it?????</a>
+                <a href="https://www.fesliyanstudios.com/">FesliyanStudios<p>Royality free background music</p></a>
             </div>
             <button class="accordion">RANDOM</button>
             <div class="panel">
                 <a href="https://doxbin.org/">doxbin -<p> crimes</p></a>
                 <a href="https://ttsdemo.com/">ttsdemo - <p>cool text to speech</p></a>
+                <a href="https://ttsmp3.com/">TtsMp3<p>Text to speech Mp3</p></a>
+                <a href="https://socialcatfish.com/">social catfish<p>Search for people</p></a>
+                <a href="https://www.chunkbase.com/apps/seed-map">Chunk Base<p>Minecraft seed viewer</p></a>
+                <a href="https://www.scifiideas.com/">Sci fi ideas<p>Sci-fi ideas</p></a>
+                <a href="http://whatthefuckshouldimakefordinner.com/index.php"><p>yea...</p></a>
+                 <a href="https://perchance.org/useful-generators">Useful generatos<p> crimes</p></a>
             </div>
             <!--
             <nav class="row">
