--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1 id="slogan">WELCOME TO WEB DUMP, A USEFUL WEBSITE IN THE INTERNET <br></h1>
             <button class="accordion">DEVELOPER</button>
             <div class="panel">
-                <a href="https://fex.net/">Fex - <p>Cloud Storage</p></a>
+                <a href="https://fex.net/">Fex<p>Cloud Storage</p></a>
                 <a href="https://cc0textures.com/list?sort=Popular">Cc0<p>free Material textures</p></a>
                 <a href="https://www.flaticon.com/">Flat icon<p>icons :D</p></a>
                 <a href="https://iconarchive.com/">Icon archive<p>more icons</p></a>
