--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             
             <button class="accordion">DOWNLOADS</button>
             <div class="panel">
+                <a href="https://www.utorrent.com/">Utorrent<p>you'll need him</p></a>
                 <a href="https://root.yt/">root.yt<p>unblock censorship</p></a>
                 <a href="https://steamunlocked.net/">steam unlocked<p>free steam games</p></a>
                 <a href="https://thehouseofportable.com/">House of portable<p>portable apps</p></a>
