--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>WEB DUMP</h1>
-    <!--<a href="">nice<p></p></a>-->
+    <!--<a href="site">title<p>descri</p></a>-->
     <div class="content">
         <!-- Page content -->
         <h1 id="slogan">WELCOME TO WEB DUMP, A USEFUL WEBSITE IN THE INTERNET <br></h1>
@@ -49,6 +49,8 @@
                 <a href="https://app.milanote.com/">Milanote<p>the tool for organizing creative projects</p></a>
                 <a href="https://hacknplan.com/">HackNPlan<p>Planner</p></a>
                 <a href="https://trello.com/">Trello<p>Organize your project workflow</p></a>
+                <a href="https://witeboard.com">Wite Board<p>White board</p></a>
+                <a href="https://untools.co">Untools<p>Tools for better thinking</p></a>
             </div>
             
             <button class="accordion">DOWNLOADS</button>
@@ -89,6 +91,8 @@
                 <a href="https://ytmp3.cc/youtube-to-mp3/">YTMP3<p> YT to Mp3</p></a>
                 <a href="https://tineye.com/">Tiny Eye<p>Reverse image search</p></a>
                 <a href="https://hack.chat/">HackChat<p>Private Chat Room</p></a>
+                <a href="https://carrd.co">Carrd<p>One page website maker</p></a>
+                <a href="https://flourish.studio">Flourish<p>InfoGraphic maker</p></a>
             </div>
 
             <button class="accordion">PRODUCTION</button>
@@ -100,6 +104,8 @@
                 <a href="https://www.colorhexa.com/">colorHexa<p>Color palettes</p></a>
                 <a href="https://www.dreamstime.com/">DreamsTime<p>Stock photos</p></a>
                 <a href="http://colormind.io/">ColorMind<p>more color palettes</p></a>
+                <a href="https://blush.design">Blush<p>Ilustration Characters for websites</p></a>
+                <a href="https://coverr.co">Coverr<p>Free Stock Videos</p></a>
             </div>
 
             <button class="accordion">MUSIC/SOUND</button>
