--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WEB DUMP</title>
     <link rel="stylesheet" href="newmain.css">
+    <link rel="shortcut icon" href="/favicon.ico">
 </head>
 <body>
     <h1>WEB DUMP</h1>
