--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="useful websites, like, a lot of websites, website dump">
     <title>WEB DUMP</title>
     <link rel="stylesheet" href="newmain.css">
     <link rel=“icon” href=”favicon.ico” type=“image/x-icon”>
