--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
                 <a href="https://www.bfxr.net/">bfxr<p>cool sounds Generator</p></a>
                 <a href="https://superlooper.universlabs.co.uk/">superlooper<p>Dj wannabe</p></a>
                 <a href="https://www.zapsplat.com/">zapsplat<p>free sound SFX</p></a>
-                <a href="https://www.findsounds.com/ISAPI/search.dll">Find sound SFX</a>
-                <a href="http://www.orangefreesounds.com/">Orange free sounds</a>
+                <a href="https://www.findsounds.com/ISAPI/search.dll">FindSounds<p>yea you've guessed</p></a>
+                <a href="http://www.orangefreesounds.com/">Orange free sounds<p>literal free sounds</p></a>
                 <a href="https://mixkit.co/">mixkit<p>more free sound SFX</p></a>
                 <a href="https://soundpacks.com/">sound packs<p>sound packs for Fl studio</p></a>
                 <a href="https://www.epidemicsound.com/sound-effects/">epidemicsound<p>what is it?????</p></a>
