--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                 <a href="https://freewebsitetemplates.com/">FreeWebsiteTemplates<p>I wonder what this is</p></a>
                 <a href="https://flutterflow.io/">FlutterFlow<p>Create mobile apps</p></a>
                 <a href="https://www.models-resource.com/">Models Resource<p>Game Assets</p></a>
+                
                 <!-- <button class="accordion">Section 1</button>
             <div class="panel">
                 <a href="#">nice</a>
@@ -58,8 +59,7 @@
 
             <button class="accordion">PRODUCTIVITY</button>
             <div class="panel">
-                <a href="https://www.naturalreaders.com/online/">Natural readers<p>reading tool</p></a>
-                <a href="https://www.textfixer.com/tools/random-word-generator.php">Random word Generator<p>eh.. generate.. words?</p></a>
+                <a href="https://ttsreader.com/">TTSReader<p>reading tool</p></a>
                 <a href="https://app.milanote.com/">Milanote<p>the tool for organizing creative projects</p></a>
                 <a href="https://hacknplan.com/">HackNPlan<p>Planner</p></a>
                 <a href="https://trello.com/">Trello<p>Organize your project workflow</p></a>
@@ -83,6 +83,7 @@
             <div class="panel">
                 <a href="https://lingojam.com/WeirdTextGenerator">Weird text Generator<p>eh.. generate.. weird text?</p></a>
                 <a href="https://www.mlpstream.org/index.php">Mlpstream<p>for the bronies</p></a>
+                <a href="https://app.inferkit.com/demo">InferKit<p>Generate movies, music, by a prompt</p></a>
                 <a href="https://monkeytype.com/">MonkeyType<p>see how fast you can type</p></a>
                 <a href="https://typings.gg/">Typings<p>see how fast you can type</p></a>
                 <a href="https://jcw87.github.io/c2-sans-fight/">Sans Fight<p>Sans Fight</p></a>
@@ -138,6 +139,8 @@
                 <a href="https://coverr.co">Coverr<p>Free Stock Videos</p></a>
                 <a href="https://all-free-download.com/">All free download<p>Free Vector images and icons</p></a>
                 <a href="https://playphrase.me/#/search">PlayPharase<p>Find a certain pharase in certain movie</p></a>
+                <a href="https://anytexteditor.com/pt/business-name-generator">Anytext Editor<p>generator for various purposes</p></a>
+                <a href="https://www.textfixer.com/tools/random-word-generator.php">Random word Generator<p>eh.. generate.. words?</p></a>
             </div>
 
             <button class="accordion">MUSIC/SOUND</button>
@@ -173,6 +176,8 @@
                 <a href="https://www.wordhippo.com/">Word Hippo<p>Word related stuff like Antonyms</p></a>
                 <a href="https://wallpaper-mania.com/">Wallpaper mania<p>Cool Wallpapers</p></a>
                 <a href="https://www.minecraftjson.com/">Minecraft json<p>Command Blocks</p></a>
+                <a href="https://wall.alphacoders.com/">Alphacoders<p>even cooler Wallpapers</p></a>
+                <a href="https://www.alchemywebsite.com/index.html">AlchemyWebsite<p>Alchemy texts and stuf</p></a>
             </div>
             <!--
             <nav class="row">
