--- a/index.html
+++ b/index.html
@@ -74,8 +74,9 @@
                 <a href="https://root.yt/">root.yt<p>unblock censorship</p></a>
                 <a href="https://steamunlocked.net/">steam unlocked<p>free steam games</p></a>
                 <a href="https://thehouseofportable.com/">House of portable<p>portable apps</p></a>
-                <a href="https://itch.io.com/">Itch.io<p>Indie Games</p></a>
+                <a href="https://itch.io/">Itch.io<p>Indie Games</p></a>
                 <a href="https://ninite.com/">Ninite<p>Download PC prerequisites in batch</p></a>
+                <a href="https://igg-games.com/">Igg-Games<p>more games (pls use ad block)</p></a>
                
             </div>
 
@@ -163,6 +164,7 @@
             <div class="panel">
                 <a href="https://doxbin.org/">doxbin<p> crimes</p></a>
                 <a href="https://ttsdemo.com/">ttsdemo<p>cool text to speech</p></a>
+                <a href="https://www.tetyys.com/SAPI4/">SAPI4<p>microsoft Text to speech</p></a>
                 <a href="https://ttsmp3.com/">TtsMp3<p>Text to speech Mp3</p></a>
                 <a href="https://socialcatfish.com/">social catfish<p>Search for people</p></a>
                 <a href="https://www.chunkbase.com/apps/seed-map">Chunk Base<p>Minecraft seed viewer</p></a>
@@ -178,6 +180,7 @@
                 <a href="https://www.minecraftjson.com/">Minecraft json<p>Command Blocks</p></a>
                 <a href="https://wall.alphacoders.com/">Alphacoders<p>even cooler Wallpapers</p></a>
                 <a href="https://www.alchemywebsite.com/index.html">AlchemyWebsite<p>Alchemy texts and stuf</p></a>
+                
             </div>
             <!--
             <nav class="row">
