--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             }
         </script>
             <header>
-               <?php echo "<h3>Copyright &copy; 2020-" . date("Y") . " Web-Dump</h3>";?>
+               <?php echo "<h3>Copyright &copy; 2020-" . date("Y") . " Web-Dump</h3>";"?>
             </header>
     </div>
 </body>
