--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
             }
         </script>
             <header>
-               <?php echo "<h3>Copyright &copy; 2020-" . date("Y") . " Web-Dump</h3>";"?>
+               <h3> WEB DUMP&copy 2022 </h3>
             </header>
     </div>
 </body>
