--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
                 <a href="https://www.geeksforgeeks.org/">Geeks4Geeks<p>learn to code and code related stuff</p></a>
                 <a href="https://nihongomaster.com/">Nihongomaster<p>Learn Japanese</p></a>
                 <a href="https://pianonanny.com/index.html">Piano nanny<p>learn how to play piano</p></a>
+                <a href="https://learn-anything.xyz/">Learn-Anything<p>platform for knowledge discovery</p></a>
             </div>
 
             <button class="accordion">PRODUCTIVITY</button>
