--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--<a href="site">title<p>descri</p></a>-->
     <div class="content">
         <!-- Page content -->
-        <h1 id="slogan">WELCOME TO WEB DUMP, A USEFUL WEBSITE IN THE INTERNET <br></h1>
+        <h1 id="slogan">WELCOME TO WEB DUMP, A USEFUL WEBSITE ON THE INTERNET <br></h1>
             <button class="accordion">DEVELOPER</button>
             <div class="panel">
                 <a href="https://fex.net/">Fex<p>Cloud Storage</p></a>
